challenge/scenarios/denier/todo-repo-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-repo-canary
  labels:
    app: todo-repo-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-repo
  template:
    metadata:
      labels:
        app: todo-repo
        version: canary
    spec:
      containers:
      - name: todo-repo
        image: atsistemas/todo-repo:0.3
        ports:
          - containerPort: 8081
            name: http
            protocol: TCP
