challenge/scenarios/denier/canary-istio.yaml

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todo-repo
  labels:
    app: todo-repo
spec:
  hosts:
  - todo-repo
  http:
  - route:
    - destination:
        host: todo-repo
        subset: all-ok
    - destination:
        host: todo-repo
        subset: canary
---
  apiVersion: networking.istio.io/v1alpha3
  kind: DestinationRule
  metadata:
    name: todo-repo
    spec:
      host: todo-repo
      subsets:
        - name: release
          labels:
            version: all-ok
        - name: canary
          labels:
            version: canary
